engine/tests/detection_corpus/bad/exec_eval_js.js
function calc(userInput) { return eval(userInput); }
